--- a/index.html
+++ b/index.html
@@ -14,24 +14,12 @@
     }
     </style>
 </head>
-<h2>Receta de Creps </h2>
-<h1> INGREDIENTES</h1>
-<body>
+<h1>RECETA Creps</h1>
+<h2>Ingredientes</h2>
+<body> 
+
 <ul>
-    <li> 125 gr de harina</li>
-    <li> 250 ml de leche</li>
-    <li> 5 gr de azucar</li>
-    <li>2 huevos</li>
-    <li>50 gr de mantequilla</li>
-    <li>1 pizca de sal</li>
-    <li>1 cucharadilla de mantequilla para usarla en la sarten</li>>
-</ul>
-<h2> Elaboracion de las Creps
-<ol>
-    <li>En primer lugar, funda la mantequilla en el microndas durante 30 0 40 segundos </li>
-
-    
-
+   
     <table border="1">
         <tr>
             <td>Ingredientes</td>
@@ -59,6 +47,30 @@
             <td>huevos</td>
             <td>2</td>
         </tr>
+        <tr>
+            <td>mantequilla</td>
+            <td>50gr</td>
+        </tr>
+        <tr>
+            <td>sal</td>
+            <td>1pizca </td>
+        
+        </tr>
+        <tr>
+            <td>mantquilla</td>
+            <td>1 cucharadilla para utilizarla en la satren</td>
+        </tr>
     </table>
+<h2> Elaboracion de las Creps
+<ol>
+    <li>En primer lugar, funda la mantequilla en el microndas durante 30 0 40 segundos </li>
+<li>A continuación, pon en un vaso de batidora los ingredientes líquidos: la leche, la mantequilla fundida y los huevos</li>
+  <li>Añade la harina, el azúcar y la sal. Tritura todos los ingredientes hasta conseguir una crema y pasa la mezcla por un colador para eliminar cualquier grumo que pueda tener</li>  
+  <li>Unta una sartén antiadherente con una cucharadita de mantequilla con la ayuda de un pincel o brocha. Pon a calentar la sartén a fuego medio.</li>
+<li>Vierte un poco de masa en el centro y espárcela bien por toda la sartén. Cuando empiece a cuajarse, dale la vuelta y cocina el crepe brevemente por el otro lado</li>
+   <li>Repite la operación hasta terminar toda la masa.
+
+</li>
+<li>¡Los crepes ya están listos!</li>
 </body>
 </html>
